--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -13,6 +13,7 @@
   src: url("../fonts/roboto-condensed-bold.woff2") format("woff2"), url("../fonts/roboto-condensed-bold.woff") format("woff");
   font-display: swap;
 }
+
 @font-face {
   font-family: "Roboto Condensed";
   font-style: normal;
@@ -26,5 +27,13 @@
   font-style: normal;
   font-weight: 600;
   src: url("../fonts/alumni-sans-semibold.woff2") format("woff2"), url("../fonts/alumni-sans-semibold.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  font-style: normal;
+  font-weight: 800;
+  src: url("../fonts/alumni-sans-extrabold.woff2") format("woff2"), url("../fonts/alumni-sans-extrabold.woff") format("woff");
   font-display: swap;
 }
