--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -16,8 +16,9 @@ html {
   font-weight: 400;
   font-size: $fz-default;
   line-height: 24px;
-  font-family: $ff-placeholder;
-  color: $color-default-black;
+  font-family: $roboto;
+  color: $sapphiret;
+  scroll-behavior: smooth;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -31,7 +32,10 @@ body {
   width: 100%;
   height: 100%;
 
+  display: flex;
+  flex-direction: column;
   background-color: $color-default-white;
+  min-width: 320px;
 }
 
 a {
