--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,15 @@
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/tabs";
+@import "blocks/about-us";
+@import "blocks/footer";
+@import "blocks/page";
+@import "blocks/social";
+@import "blocks/menu";
+@import "blocks/page-wrapper";
+@import "blocks/contacts";
+@import "blocks/form";
+
 
 
 // ---------------------------------
