--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,8 +30,9 @@
 @import "blocks/page-wrapper";
 @import "blocks/contacts";
 @import "blocks/form";
-
-
+@import "blocks/main-header";
+@import "blocks/navigation";
+@import "blocks/hero";
 
 // ---------------------------------
 
