--- a/source/sass/blocks/page-wrapper.scss
+++ b/source/sass/blocks/page-wrapper.scss
@@ -1,6 +1,15 @@
 .page-wrapper {
-  display: grid;
-  grid-template-columns: repeat(2,50%);
-  width: 100%;
-  margin: 0 auto;
+  background: linear-gradient(90deg, #102654 50%, $color-default-white 50%);
+  background-position: center;
+  border-top: 1px solid $light-slate-grey;
+
+  &__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    width: 100%;
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0 clamp(45px, 7.5vw, 50px);
+  }
 }
