--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -33,6 +33,14 @@
 @font-face {
   font-family: "Alumni Sans";
   font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/alumni-sans-bold.woff2") format("woff2"), url("../fonts/alumni-sans-bold.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  font-style: normal;
   font-weight: 800;
   src: url("../fonts/alumni-sans-extrabold.woff2") format("woff2"), url("../fonts/alumni-sans-extrabold.woff") format("woff");
   font-display: swap;
