--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,9 +13,10 @@ $color-transparent:rgba(255, 255, 255, 0);
 $sapphiret:#102654;
 $egyptian-blue: #103aae;
 $whisper: #e8e8e8;
+$light-slate-grey: #74819c;
 
 
-$resolution-blue: #1C3374; //bg
+$resolution-blue: #1c3374; //bg
 $ghost-white: #f8f9fc; //bg
 $torch-red: #ed0233; //bg
 $black-russian: #030a1a; //bg
@@ -23,9 +24,9 @@ $black-russian: #030a1a; //bg
 // Gradient
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
-$red-to-blue: conic-gradient(from 150.87deg at 16.03% 39.06%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
+$red-to-blue: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
 $text-red-blue: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
-$button-red-blue: linear-gradient(97.05deg, #ED0233 17.6%, #003EB7 95.31%);
+$button-red-blue: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
 
 // Typography
 // ---------------------------------
@@ -39,8 +40,6 @@ $fz-default:                        16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
-
-
 
 
 // Animation
