--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -24,7 +24,9 @@ $black-russian: #030a1a; //bg
 // Gradient
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
-$red-to-blue: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$red-to-blue: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg); //desktop
+$red-to-blue-tablet: conic-gradient(from 155.49deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg); //tablet
+$red-to-blue-mobile:conic-gradient(from 167.26deg at 35.31% 34.22%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg); //mobile
 $text-red-blue: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
 $button-red-blue: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
 
