--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,7 +1,10 @@
 .hero {
   display: flex;
-  flex-wrap: wrap;
   margin-top: -30px;
+
+  @media (max-width: $tablet-width) {
+    margin-top: 0;
+  }
 }
 
 .hero__description {
@@ -10,6 +13,21 @@
   grid-template-columns: 132px 263px;
   color: $color-default-white;
   padding-top: 60px;
+
+  @media (max-width: $tablet-width) {
+    grid-template-columns: 113px 210px;
+    margin-right: 31px;
+    padding-top: 26px;
+  }
+
+  @media (max-width: $mobile-width) {
+    grid-template-columns: 113px 1fr;
+    width: 100%;
+    margin: 0 auto;
+    max-width: 400px;
+    padding-top: 63px;
+  }
+
 
   h1 {
     margin: 0;
@@ -25,6 +43,18 @@
     text-align: right;
     padding-top: 16px;
     -webkit-text-stroke: 4px;
+
+    @media (max-width: $tablet-width) {
+      font-size: 72px;
+      line-height: 86px;
+      text-transform: none;
+      padding-top: 9px;
+    }
+
+    @media (max-width: $mobile-width) {
+      padding-top: 14px;
+      margin-left: -10px;
+    }
   }
 
   h2 {
@@ -40,6 +70,18 @@
     text-transform: lowercase;
     padding-right: 50px;
     padding-top: 20px;
+
+    @media (max-width: $tablet-width) {
+      padding: 0 2px 0 0;
+      font-size: 34px;
+      line-height: 41px;
+    }
+
+    @media (max-width: $mobile-width) {
+      font-size: 28px;
+      line-height: 34px;
+      padding-right: 2px;
+    }
   }
 }
 
@@ -55,6 +97,13 @@
   place-self: center end;
   text-align: right;
   padding-top: 68px;
+
+  @media (max-width: $tablet-width) {
+    padding-top: 51px;
+  }
+  @media (max-width: $mobile-width) {
+    padding-top: 59px;
+  }
 }
 
 .hero__button {
@@ -75,6 +124,21 @@
   margin-left: 33px;
   margin-bottom: 26px;
 
+  @media (max-width: $tablet-width) {
+    padding: 20px 30px 20px 31px;
+    margin-left: 26px;
+    margin-bottom: 12px;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 100%;
+    grid-column: 1/3;
+    margin: 0;
+    transform: translate(1px,23px);
+    padding: 20px 36px 20px 33px;
+    margin-bottom: 0px;
+  }
+
   &:hover,
   &:focus {
     opacity: 0.8;
@@ -82,5 +146,12 @@
 
   &:active {
     opacity: 0.5;
+  }
+}
+
+.hero__image {
+
+  @media (max-width: $mobile-width) {
+    display: none;
   }
 }
