--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,8 @@
 @import "blocks/main-header";
 @import "blocks/navigation";
 @import "blocks/hero";
+@import "blocks/place";
+@import "blocks/video";
 
 // ---------------------------------
 
