--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -29,6 +29,7 @@ $red-to-blue-tablet: conic-gradient(from 155.49deg at 20.7% 35.74%, #b80027 -46.
 $red-to-blue-mobile:conic-gradient(from 167.26deg at 35.31% 34.22%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg); //mobile
 $text-red-blue: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
 $button-red-blue: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
+$video-button: linear-gradient(44.89deg, #003d85 25.38%, #b80027 74.89%);
 
 // Typography
 // ---------------------------------
