--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,6 +36,7 @@
 @import "blocks/place";
 @import "blocks/video";
 @import "blocks/promo";
+@import "blocks/staff";
 
 // ---------------------------------
 
