--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -37,6 +37,7 @@
 @import "blocks/video";
 @import "blocks/promo";
 @import "blocks/staff";
+@import "blocks/advantages";
 
 // ---------------------------------
 
