--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,9 @@ $egyptian-blue: #103aae;
 $whisper: #e8e8e8;
 $light-slate-grey: #74819c;
 $chambray: #495a7d;
+$spindle:#b6bdcc;
+$persian-blue: #2e35ac;
+
 
 $resolution-blue: #1c3374; //bg
 $ghost-white: #f8f9fc; //bg
@@ -30,6 +33,8 @@ $red-to-blue-mobile:conic-gradient(from 167.26deg at 35.31% 34.22%, #b80027 -46.
 $text-red-blue: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
 $button-red-blue: linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
 $video-button: linear-gradient(44.89deg, #003d85 25.38%, #b80027 74.89%);
+
+$item-bg: rgba(16, 38, 84, 0.89);
 
 // Typography
 // ---------------------------------
