--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,10 @@
 @import "blocks/promo";
 @import "blocks/staff";
 @import "blocks/advantages";
+@import "blocks/commercial";
+@import "blocks/offer";
+@import "blocks/discount";
+@import "blocks/feedback";
 
 // ---------------------------------
 
