--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -48,8 +48,9 @@
 }
 
 .video__button {
-  top: 35%;
-  left: 40%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   position: absolute;
   display: flex;
   margin: 0 auto;
@@ -116,13 +117,16 @@
       height: 10px;
     }
   }
-
-  @media (max-width: $mobile-width) {
-    left: 42%;
-  }
 }
 
 .video__image {
+  @media (max-width: $tablet-width) {
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   @media (max-width: $mobile-width) {
     img {
       width: 100%;
