--- a/css/style.css
+++ b/css/style.css
@@ -1750,6 +1750,7 @@ button,
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
+  max-height: 31px;
 }
 
 .navigation__phone {
@@ -1770,7 +1771,7 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: -30px;
+  margin-top: -10px;
 }
 
 .hero__description {
@@ -1903,6 +1904,7 @@ button,
   max-width: 415px;
   min-width: 200px;
   color: #102654;
+  width: max(266px, min(31vw, 415px));
 }
 
 .place__description h2 {
@@ -1935,6 +1937,7 @@ button,
 
 .place__image-wrapper {
   position: relative;
+  max-height: 401px;
 }
 
 .video {
@@ -1956,8 +1959,11 @@ button,
 }
 
 .video__button {
-  top: 35%;
-  left: 40%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2587,7 +2593,7 @@ button,
   font-size: 18px;
   line-height: 25px;
   margin: 0;
-  margin-bottom: auto;
+  margin-bottom: 50px;
 }
 
 .offer__description a {
@@ -2604,6 +2610,7 @@ button,
   width: -moz-fit-content;
   width: fit-content;
   border-bottom: 2px solid #ffffff;
+  margin-top: auto;
 }
 
 .offer__description a:hover,
@@ -2619,6 +2626,7 @@ button,
   -o-object-fit: contain;
   object-fit: contain;
   width: 100%;
+  height: 100%;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
@@ -3117,6 +3125,11 @@ button,
     max-width: 515px;
     margin: 0 auto;
     margin-bottom: 35px;
+    width: unset;
+  }
+
+  .place__image-wrapper {
+    max-height: 100%;
   }
 
   .place__image img {
@@ -3157,6 +3170,11 @@ button,
   .video__button svg {
     margin-left: 6%;
     height: 10px;
+  }
+
+  .video__image img {
+    width: 100%;
+    height: 100%;
   }
 
   .promo__wrapper {
@@ -3722,6 +3740,7 @@ button,
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
+    width: unset;
   }
 
   .place__description p {
@@ -3730,6 +3749,7 @@ button,
 
   .place__image-wrapper {
     position: unset;
+    max-height: 100%;
   }
 
   .place__image {
@@ -3748,10 +3768,6 @@ button,
     aspect-ratio: 1.91/1;
     width: 100%;
     height: 100%;
-  }
-
-  .video__button {
-    left: 42%;
   }
 
   .video__image img {
@@ -3776,6 +3792,7 @@ button,
   .promo__description {
     width: 100%;
     margin: 0 auto;
+    max-width: 100%;
   }
 
   .promo__button {
