--- a/source/sass/blocks/staff.scss
+++ b/source/sass/blocks/staff.scss
@@ -8,7 +8,7 @@
   padding: 45px;
   padding-top: 0;
   margin: 0 auto;
-  padding-bottom: 140px;
+  padding-bottom: 137px;
 
   h2 {
     margin: 0;
@@ -20,7 +20,7 @@
     color: $sapphiret;
     padding-left: 60px;
     padding-right: 60px;
-    margin-bottom: 48px;
+    margin-bottom: 45px;
   }
 
   @media (max-width: $tablet-width) {
@@ -55,6 +55,18 @@
   grid-auto-flow: column;
   height: 294px;
   transform: translate3d(0, 0, 0);
+  padding-top: 3px;
+  padding-bottom: 3px;
+
+  @media (max-width: $tablet-width) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .staff__item {
