--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -97,9 +97,21 @@
   }
 }
 
-.offer__image img {
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
-  align-self: center;
+.offer__image {
+  max-height: 462px;
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    align-self: center;
+  }
+
+  @media (max-width: $tablet-width) {
+    max-height: 100%;
+
+    img {
+      object-fit: contain;
+    }
+  }
 }
