--- a/css/style.css
+++ b/css/style.css
@@ -2622,9 +2622,13 @@ button,
   opacity: 0.5;
 }
 
+.offer__image {
+  max-height: 462px;
+}
+
 .offer__image img {
-  -o-object-fit: contain;
-  object-fit: contain;
+  -o-object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 100%;
   -ms-flex-item-align: center;
@@ -3408,6 +3412,15 @@ button,
     grid-template-columns: 41% 59%;
   }
 
+  .offer__image {
+    max-height: 100%;
+  }
+
+  .offer__image img {
+    -o-object-fit: contain;
+    object-fit: contain;
+  }
+
   .discount__list {
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
@@ -3671,6 +3684,10 @@ button,
   .navigation__logo svg {
     width: 69px;
     height: 24px;
+  }
+
+  .navigation__logo {
+    max-height: 24px;
   }
 
   .navigation__phone {
